--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.1.1",
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.1.4",
-    "axios": "^1.9.0",
-    "mongoose": "^8.6.2",
-    "next": "14.2.4",
-    "next-auth": "^4.24.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "axios": "^1.13.2",
+    "mongoose": "^9.0.1",
+    "nanoid": "^5.1.6",
+    "next": "^16.0.7",
+    "next-auth": "^4.24.13",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icons": "^5.2.1",
     "recharts": "^2.12.7"
   },
