--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "npm build",
+    "start": "npm start",
+    "lint": "npm lint"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
@@ -14,7 +14,7 @@
     "axios": "^1.13.2",
     "mongoose": "^9.0.1",
     "nanoid": "^5.1.6",
-    "next": "16.0.10",
+    "next": "^16.0.7",
     "next-auth": "^4.24.13",
     "react": "18.3.1",
     "react-dom": "18.3.1",
