--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.1.4",
     "axios": "^1.13.2",
+    "mongodb": "^7.0.0",
     "mongoose": "^9.0.1",
     "nanoid": "^5.1.6",
     "next": "^16.0.7",
